Fix owner column of TransactionsListItem on small screen

--- a/packages/frontend/src/components/transactions/TransactionsListItem.scss
+++ b/packages/frontend/src/components/transactions/TransactionsListItem.scss
@@ -79,7 +79,11 @@
           display: none;
         }
 
-        .Identifier, .TransactionsListItem__AliasContainer, .Identifier__Avatar, a {
+        .TransactionsListItem__OwnerLink,
+        .Identifier,
+        .TransactionsListItem__AliasContainer,
+        .Identifier__Avatar,
+        a {
           display: block !important;
         }
 
